...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray">

        <TextView
            android:id="@+id/item_title"
...
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/item_votes"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/item_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
